# mobile-power-saver

./: Overrides.md  README.md  TODO  meson.build  meson_options.txt
common/: define.h  services.c  services.h  utils.c  utils.h
data/: android-cpuset.service  meson.build  org.adishatz.Mps.gschema.xml  org.adishatz.Mps.xml
data/overrides/: 10_mobile_power_saver_droidian_miatoll.gschema.override  10_mobile_power_saver_droidian_phosh.gschema.override  10_mobile_power_saver_gnome.gschema.override  10_mobile_power_saver_mobian_phosh.gschema.override
debian/: control  mobile-power-saver-droidian-miatoll.install  mobile-power-saver-droidian-phosh.install  mobile-power-saver-gnome.install  mobile-power-saver-mobian-phosh.install
sh/: android-cpuset  meson.build
system/: binder.c  binder.h  binder_client.c  binder_radio.c  bus.c  cpufreq.c  devfreq.c  freezer.c  freq_device.c  logind.c  manager.c  meson.build  modem.c  modem.h  modem_ofono.c  modem_ofono_device.c  network_manager.c  processes.c  processes.h
user/: bluetooth.c  bluetooth.h  bus.c  dozing.c  dozing.h  manager.c  meson.build  modem.c  modem.h  modem_mm.c  modem_ofono.c  modem_ofono_device.c  modem_ofono_device.h  mpris.c  network_manager.c  network_manager_modem.c  network_manager_modem.h  settings.c  settings.h
