# features
option('wifi', type: 'boolean', value: true, description: 'Enable or disable Wi-Fi powersave support')
option('cpuset', type: 'boolean', value: true, description: 'Enable or disable Android like cpuset')
option('mm', type: 'boolean', value: false, description: 'Enable ModemManager support')
